feat(CurriculumPage): refactor layout and styles for improved consistency and readability

--- a/src/locales/en/curriculumPage.json
+++ b/src/locales/en/curriculumPage.json
@@ -79,7 +79,7 @@
         "url": "https://www.udemy.com/certificate/UC-5118f6be-318a-403a-8c50-a0c31e43d7d1/"
       },
       {
-        "name": "English Language Diploma - Pink and Blue",
+        "name": "English Language Diploma - PBF",
         "url": "https://www.linkedin.com/in/ednanrff/details/certifications/1755444372013/single-media-viewer/?type=DOCUMENT&profileId=ACoAABqsxoUBIyPE3dECZFKhjprtqenAAHm7AuU"
       }
     ]
