feat(NavBar, routing): remove contact page and related navigation for streamlined user experience

--- a/src/locales/pt/common.json
+++ b/src/locales/pt/common.json
@@ -1,7 +1,6 @@
 {
   "nav": {
     "curriculum": "Currículo",
-    "projects": "Projetos",
-    "contact": "Contato"
+    "projects": "Projetos"
   }
 }
