--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -1,7 +1,6 @@
 {
   "nav": {
     "curriculum": "Curriculum",
-    "projects": "Projects",
-    "contact": "Contact"
+    "projects": "Projects"
   }
 }
