--- a/src/locales/en/projectsPage.json
+++ b/src/locales/en/projectsPage.json
@@ -1,21 +1,21 @@
 {
   "gameJournal": {
     "title": "Game Journal",
-    "points": [
-      "Built a fullstack PWA, installable on iOS/Android.",
-      "Implemented user authentication and data persistence with MongoDB.",
-      "Implemented data validation with Zod and schema-based access control, ensuring robust security and user permissions.",
-      "Designed a responsive UI with CSS Modules and React Router."
-    ]
+    "points": {
+      "point1": "Built a fullstack PWA, installable on iOS/Android.",
+      "point2": "Implemented user authentication and data persistence with MongoDB.",
+      "point3": "Implemented data validation with Zod and schema-based access control, ensuring robust security and user permissions.",
+      "point4": "Designed a responsive UI with CSS Modules and React Router."
+    }
   },
   "mernTaskManager": {
     "title": "MERN Task Manager",
-    "points": [
-      "Built a fullstack MERN application for task management.",
-      "Designed REST API with Express and Mongoose with CRUD operations.",
-      "Implemented user authentication with JWT and secured routes.",
-      "Optimized frontend with responsive design and CSS Modules for a seamless user experience."
-    ]
+    "points": {
+      "point1": "Built a fullstack MERN application for task management.",
+      "point2": "Designed REST API with Express and Mongoose with CRUD operations.",
+      "point3": "Implemented user authentication with JWT and secured routes.",
+      "point4": "Optimized frontend with responsive design and CSS Modules for a seamless user experience."
+    }
   },
   "githubLink": "GitHub",
   "liveDemoLink": "Live Demo"
