fix(ProjectsPage): update project titles for consistency and adjust layout for better responsiveness

--- a/src/locales/en/projectsPage.json
+++ b/src/locales/en/projectsPage.json
@@ -18,7 +18,7 @@
     }
   },
   "weatherTailWind": {
-    "title": "Weather Tailwind",
+    "title": "Tailwind",
     "points": {
       "point1": "Built a weather application using React and Tailwind CSS.",
       "point2": "Integrated with OpenWeather API for real-time weather data.",
