fix(curriculumPage): update focus description for clarity and consistency

--- a/src/locales/pt/curriculumPage.json
+++ b/src/locales/pt/curriculumPage.json
@@ -28,7 +28,7 @@
     },
     "bachelor": {
       "degree": "Bacharel em Direito - Faculdade de Direito de Franca, 2012",
-      "focus": "Foco: Raciocínio jurídico, consciência de conformidade, resolução estruturada de problemas"
+      "focus": "Foco: Raciocínio jurídico, consciência de compliance, resolução estruturada de problemas"
     }
   },
   "certifications": {
