fix(CurriculumPage): add LinkedIn certifications URL for better access
* Updated the certifications section to include a direct link to the LinkedIn certifications page.
* Ensured the link is accessible in both English and Portuguese locales.

--- a/src/locales/en/curriculumPage.json
+++ b/src/locales/en/curriculumPage.json
@@ -34,6 +34,7 @@
   "certifications": {
     "title": "Certifications",
     "viewAll": "View all certifications on LinkedIn",
+    "viewAllUrl": "https://www.linkedin.com/in/ednanrff/details/certifications/",
     "list": {
       "cert1": {
         "name": "The Complete JavaScript Course: From Zero to Expert",
