--- a/src/locales/pt/curriculumPage.json
+++ b/src/locales/pt/curriculumPage.json
@@ -34,6 +34,7 @@
   "certifications": {
     "title": "Certificações",
     "viewAll": "Ver todas as certificações no LinkedIn",
+    "viewAllUrl": "https://www.linkedin.com/in/ednanrff/details/certifications/",
     "list": {
       "cert1": {
         "name": "The Complete JavaScript Course: From Zero to Expert",
