fix(curriculumPage): correct LinkedIn capitalization for consistency

--- a/src/locales/pt/curriculumPage.json
+++ b/src/locales/pt/curriculumPage.json
@@ -3,7 +3,7 @@
     "title": "Informações de Contato",
     "name": "Nome: Ednan Rogério Frizzera Filho",
     "email": "Email: ednan@frizzera.dev",
-    "linkedin": "Linkedin",
+    "linkedin": "LinkedIn",
     "github": "GitHub"
   },
   "profile": {
