--- a/src/locales/en/curriculumPage.json
+++ b/src/locales/en/curriculumPage.json
@@ -3,7 +3,7 @@
     "title": "Contact Info",
     "name": "Name: Ednan Rogério Frizzera Filho",
     "email": "Email: ednan@frizzera.dev",
-    "linkedin": "Linkedin",
+    "linkedin": "LinkedIn",
     "github": "GitHub"
   },
   "profile": {
