--- a/src/locales/en/curriculumPage.json
+++ b/src/locales/en/curriculumPage.json
@@ -4,7 +4,11 @@
     "name": "Name: Ednan Rogério Frizzera Filho",
     "email": "Email: ednan@frizzera.dev",
     "linkedin": "LinkedIn",
-    "github": "GitHub"
+    "github": "GitHub",
+    "cv": {
+      "url": "https://res.cloudinary.com/ednan/image/upload/v1755793968/CV-2025-EN_fnx8nt.pdf",
+      "text": "PDF Version"
+    }
   },
   "profile": {
     "title": "Developer Profile",
