--- a/src/locales/pt/curriculumPage.json
+++ b/src/locales/pt/curriculumPage.json
@@ -68,7 +68,7 @@
   },
   "languages": {
     "title": "Idiomas",
-    "english": "Inglês (nível C2)",
-    "portuguese": "Português (nativo)"
+    "english": "Inglês: C2",
+    "portuguese": "Português: nativo"
   }
 }
